# ClusterUI

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  README.md  conanfile.py  rpi5-toolchain.cmake
profiles/: linux-x86  qnx-aarch64  rpi5
qml/: ClusterRoot.qml  PipOverlay.qml  Speedometer.qml  Tachometer.qml
qml/themes/: Normal.qml  Sport.qml
scripts/: deploy.sh
src/: RvcStreamHandler.cpp  RvcStreamHandler.h  VhalGrpcClient.cpp  VhalGrpcClient.h  main.cpp  vehiclebridge.cpp  vehiclebridge.h  vehiclestate.h
